--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ jobs:
   - stage: deploy
     python: 3.6
     script: skip
+    after_success: skip
     deploy:
       provider: pypi
       user: jerry-pypi
