--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ jobs:
     env: TOXENV=py35
   - python: 3.6
     env: TOXENV=py36
+  - python: 3.7
+    env: TOXENV=py37
+    dist: xenial
+    sudo: true
   - stage: deploy
     python: 3.6
     script: skip
