--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ classifier =
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
 [entry_points]
 console_scripts =
